--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-alpha-vantage.key=${ALPHA_VANTAGE_KEY}
+financial-modeling-prep.api-key=${FMP_API_KEY}
+
 spring.application.name=scraper-manager
 logging.level.root=INFO
 server.port=9200
-
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${DB_URL}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.jdbc.batch_siz=50
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
