--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,14 @@
         <version>2.4.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>com.example</groupId>
     <artifactId>portfolio-watch</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>portfolio-watch</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Portfolio Watch project using Spring Boot.</description>
+    <packaging>jar</packaging>
+
     <properties>
         <java.version>1.8</java.version>
     </properties>
