--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,12 @@
     <packaging>jar</packaging>
 
     <properties>
+        <start-class>com.portfoliowatch.Application</start-class>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
