--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,13 @@ server.ssl.key-store=${KEY_STORE_LOC}
 server.ssl.key-store-password=${KEY_STORE_PASS}
 server.ssl.keyStoreType=PKCS12
 
+td-ameritrade.account-id=${TD_ACCT_ID}
 td-ameritrade.redirect=${TD_REDIRECT}
 td-ameritrade.client-id=${TD_CLIENT_ID}
 
 financial-modeling-prep.api-key=${FMP_API_KEY}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${DB_URL}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.jdbc.batch_siz=50
