Added @Slf4j to replace manual logger instantiation and replaced autowiring by field to autowiring at constructor level.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=scraper-manager
 logging.level.root=INFO
 server.port=9200
+server.servlet.context-path=/api
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
