--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,8 @@
-spring.application.name=scraper-manager
+spring.application.name=portfolio-watch
 logging.level.root=INFO
 server.port=9200
-server.servlet.context-path=/api
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${EMAIL_USER}
-spring.mail.password=${EMAIL_PASS}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${DB_URL}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.jdbc.batch_siz=50
 
