feat: updated corporate action logic, added lot sales and code formatting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${DB_URL}
 spring.jpa.properties.hibernate.jdbc.batch_siz=50
 
+spring.jackson.default-property-inclusion=non_null
