fix: changed to LocalDate to process dates "as is" in database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,9 @@ logging.level.root=INFO
 server.port=9200
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${DB_URL}
-spring.jpa.properties.hibernate.jdbc.batch_siz=50
+spring.jpa.properties.hibernate.jdbc.batch_size=50
 
 spring.jackson.default-property-inclusion=non_null
+spring.jackson.time-zone=UTC
+
+spring.datasource.url=${DB_URL}
